opam-version: "2.0"
maintainer: "Zach Shipko <zachshipko@gmail.com>"
authors: ["Zach Shipko <zachshipko@gmail.com>"]
homepage: "https://github.com/zshipko/ocaml-py"
doc: "https://zshipko.github.io/ocaml-py/doc"
license: "ISC"
dev-repo: "git+https://github.com/zshipko/ocaml-py.git"
bug-reports: "https://github.com/zshipko/ocaml-py/issues"
tags: ["python"]

depends:
[
  "ocaml" {>= "4.05.0"}
  "dune" {build}
  "ctypes" {>= "0.13.0"}
  "ctypes-foreign" {>= "0.4.0"}
]

depexts: [
  ["python3-dev"] {os-distribution = "debian"}
  ["python3-dev"] {os-distribution = "ubuntu"}
  ["python3-devel"] {os-distribution = "fedora"}
  ["python3-dev"] {os-distribution = "alpine"}
  ["python3"] {os = "macos" & os-distribution = "homebrew"}
]

build:
[
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

post-messages: [
    "Py requires Python 3.5 or greater"
]

synopsis: "Ctypes bindings to Python 3.5 or greater"
